[gd_scene load_steps=16 format=3 uid="uid://cvdae5oociat5"]

[ext_resource type="Script" path="res://scripts/projectiles/Grenade.gd" id="1_b6dp5"]
[ext_resource type="Texture2D" uid="uid://dqnt55tmn2gec" path="res://assets/Spritesheet/allSprites_retina.png" id="2_vlp02"]
[ext_resource type="Shader" path="res://scripts/shaders/PixelisedShader.gdshader" id="3_y60vn"]
[ext_resource type="PackedScene" uid="uid://hcaid5opl6tx" path="res://scenes/particles/ExplosionParticles.tscn" id="4_iykil"]
[ext_resource type="Shader" path="res://scripts/shaders/ShockWaveShader.gdshader" id="5_tb318"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b75nu"]
size = Vector2(15, 35)

[sub_resource type="CircleShape2D" id="CircleShape2D_6quda"]
radius = 142.004

[sub_resource type="Gradient" id="Gradient_0p2yp"]
offsets = PackedFloat32Array(0, 0.636364)
colors = PackedColorArray(0.890196, 0, 0, 1, 1, 0.392157, 0.0588235, 1)

[sub_resource type="Animation" id="Animation_1cpb0"]
resource_name = "grenade_explosion_particles"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../../Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3j8va"]
_data = {
"grenade_explosion_particles": SubResource("Animation_1cpb0")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cayae"]
shader = ExtResource("3_y60vn")
shader_parameter/pixelSize = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_djmat"]
shader = ExtResource("5_tb318")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/force = 0.493994
shader_parameter/size = 0.05
shader_parameter/thickness = 0.01

[sub_resource type="Animation" id="Animation_yeqyy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectShockWave:material:shader_parameter/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.05]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRectShockWave:material:shader_parameter/force")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.493994]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRectShockWave:material:shader_parameter/thickness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}

[sub_resource type="Animation" id="Animation_lolpv"]
resource_name = "shockwave_shader_animation"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectShockWave:material:shader_parameter/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 0.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRectShockWave:material:shader_parameter/force")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.03, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRectShockWave:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRectShockWave:material:shader_parameter/thickness")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 0.1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wqy4q"]
_data = {
"RESET": SubResource("Animation_yeqyy"),
"shockwave_shader_animation": SubResource("Animation_lolpv")
}

[node name="Grenade" type="CharacterBody2D" node_paths=PackedStringArray("shader_animation", "particle_animation")]
collision_layer = 0
script = ExtResource("1_b6dp5")
shader_animation = NodePath("ShockWaveControl/AnimationPlayer")
particle_animation = NodePath("ExplosionControl/SubViewportContainer/PixelizedSubViewport/ExplosionParticles/AnimationPlayer")
speed = 7
damages = 10
size = 0.7
impact_force = 0.2

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_b75nu")

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="ExplosionCollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_6quda")
debug_color = Color(0, 0.592157, 0.745098, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vlp02")
region_enabled = true
region_rect = Rect2(1106, 492, 17, 37)

[node name="ExplosionTimer" type="Timer" parent="."]
one_shot = true

[node name="GrenadeExplosionParticles" type="CPUParticles2D" parent="."]
visible = false
z_index = 40
amount = 30
lifetime = 0.25
one_shot = true
explosiveness = 0.78
randomness = 1.0
lifetime_randomness = 0.17
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_min = 10.0
scale_amount_max = 19.86
color_ramp = SubResource("Gradient_0p2yp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="GrenadeExplosionParticles"]
libraries = {
"": SubResource("AnimationLibrary_3j8va")
}

[node name="ExplosionControl" type="Control" parent="."]
visibility_layer = 2
z_index = 1
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="ExplosionControl"]
visibility_layer = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 150)

[node name="PixelizedSubViewport" type="SubViewport" parent="ExplosionControl/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4294967294
size = Vector2i(300, 300)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="ExplosionControl/SubViewportContainer/PixelizedSubViewport"]

[node name="ColorRect-Pixels" type="ColorRect" parent="ExplosionControl/SubViewportContainer/PixelizedSubViewport/CanvasLayer"]
visibility_layer = 2
material = SubResource("ShaderMaterial_cayae")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExplosionParticles" parent="ExplosionControl/SubViewportContainer/PixelizedSubViewport" instance=ExtResource("4_iykil")]
visibility_layer = 2
position = Vector2(150, 150)
amount = 25
speed_scale = 0.75
scale_amount_min = 5.0
scale_amount_max = 15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExplosionControl/SubViewportContainer/PixelizedSubViewport/ExplosionParticles"]
libraries = {
"": SubResource("AnimationLibrary_3j8va")
}

[node name="ShockWaveControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0

[node name="ColorRectShockWave" type="ColorRect" parent="ShockWaveControl"]
visible = false
material = SubResource("ShaderMaterial_djmat")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ShockWaveControl"]
libraries = {
"": SubResource("AnimationLibrary_wqy4q")
}

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
